# Online-shop-project

./: .gitignore  ERD  LICENSE  README.md  pyproject.toml
apps/core/: managers.py  models.py
apps/order/: admin.py  custom_filters.py  helpers.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/order/templatetags/: custom_filters.py
apps/product/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/product/management/commands/: create_periodic_task.py
apps/seller/: forms.py  urls.py  views.py
apps/user/: admin.py  backends.py  forms.py  manager.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
config/: celery.py  settings.py  urls.py
locale/fa/LC_MESSAGES/: django.po
public/: urls.py  views.py
templates/: 404.html  Login.html  Register.html  Reviews.html  address_edit.html  address_list.html  base.html  create_address.html  create_discount.html  edit_address.html  email_verification.html  home.html  messages.html  navbar.html  orders.html  payment_initiate.html  payment_success.html  product_confirm_delete.html  product_form.html  productdetales.html  products.html  seller_panel.html  user_profile.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
