[tool.poetry]
name = "online-shop-project"
version = "0.1.0"
description = ""
authors = ["Amir <amirm2.asghari0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["mail"], version = "^5.0.4"}
coverage = "^7.4.4"
django-redis = "^5.4.0"
pyotp = "^2.9.0"
redis = "^5.0.4"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
python-decouple = "^3.8"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
